--- a/package.json
+++ b/package.json
@@ -43,20 +43,21 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@vitest/coverage-v8": "^3.2.4",
-    "oxlint": "^1.6.0",
-    "pnpm": "^10.13.0",
+    "conventional-changelog-cli": "^5.0.0",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
+    "lint-staged": "^16.1.2",
+    "oxlint": "^1.7.0",
+    "pnpm": "^10.13.1",
     "prettier": "^3.6.2",
     "simple-git-hooks": "^2.13.0",
     "tsdown": "^0.12.9",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "vitest": "^3.2.4",
-    "conventional-changelog-cli": "^5.0.0",
-    "conventional-changelog-conventionalcommits": "^9.1.0"
+    "vitest": "^3.2.4"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm format && pnpm lint && pnpm test",
-    "commit-msg": "npx --no-install commitlint --edit \"$1\""
+    "pre-commit": "npx --no lint-staged",
+    "commit-msg": "npx --no commitlint --edit \"$1\""
   },
   "repository": {
     "type": "git",
